# bfgamp

./: README.md  amp.cpp  meson.build
audio/: amp.h  effects.h
lib/: librtaudio.7.dylib  librtaudio.so.7  librtaudio.so.7.0.0
